Fix attribution overlay not covering all elements Adjust table column widths and add units to data type switching options

--- a/src/components/controls/data-controls.sass
+++ b/src/components/controls/data-controls.sass
@@ -7,7 +7,7 @@
   border-bottom: 2px solid silver
 
   .data-option
-    width: 130px
+    width: 140px
     display: inline-block
     height: 18px
     background: $color-nav-cinder-light3
